--- a/templates/home.html
+++ b/templates/home.html
@@ -4,12 +4,16 @@
 
 {% block content %}
 <div class="user-info">
-    <h3>Добро пожаловать!</h3>
-    <p>Вы вошли как: <strong>{{ username }}</strong></p>
+    <h3>Добро пожаловать, {{ username }}!</h3>
 </div>
 
-<p>Вы успешно авторизовались в системе.</p>
-<p>Это защищенная страница, доступная только авторизованным пользователям.</p>
+<div class="content-text">
+    <p>✅ Вы успешно авторизовались в системе.</p>
+    <p>🔒 Это защищенная страница, доступная только авторизованным пользователям.</p>
+    <p>📍 Теперь вы можете пользоваться всеми функциями приложения.</p>
+</div>
 
-<a href="{{ url_for('logout') }}" class="btn btn-logout">Выйти</a>
+<div style="text-align: center; margin-top: 30px;">
+    <a href="{{ url_for('logout') }}" class="btn btn-logout">Выйти из системы</a>
+</div>
 {% endblock %}
